<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    android:padding="40dp"
    android:background="@color/gold"
    tools:context=".TriviaActivity">

    <Button
        android:id="@+id/btn_anterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_anterior" />

    <Button
        android:id="@+id/btn_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/btn_siguiente"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_below="@id/btn_anterior"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:id="@+id/tv_nro_pregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="Pregunta 1" />

    <ImageView
        android:id="@+id/img_trivia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nro_pregunta"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_descr"
        android:scaleType="centerCrop"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/image2" />

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:id="@+id/tv_trivia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_trivia"
        android:layout_marginTop="16dp"
        tools:text="lorem ipsum dolor" />

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/btn_verdadero"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_trivia"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_verdadero" />

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/btn_falso"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_verdadero"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_falso" />

</RelativeLayout>